--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         .controls {
             position: fixed;
-            bottom: -10px;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
@@ -69,8 +69,10 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 640px;
-            height: 480px;
+            width: 80%;
+            height: 70%;
+            max-width: 800px;
+            max-height: 600px;
             border: none;
             z-index: 100;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -78,29 +80,6 @@
 
         iframe.active {
             display: block;
-        }
-
-        .eye-button {
-            display: none;
-            position: fixed;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            width: 50px;
-            height: 50px;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            font-size: 24px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            z-index: 10;
-        }
-
-        .eye-button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
         }
 
         .instructions {
@@ -170,8 +149,6 @@
 
     <iframe id="feedback-form" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__RgmXVJUQUpYTlBQQzgyWVBNQU9MWkNKN0tRWkM4Vi4u&embed=true"></iframe>
 
-    <div class="eye-button" id="eye-button">&#128065;</div>
-
     <script>
         // إلغاء فتح النموذج تلقائيًا عند تحميل الصفحة
         function loadApp() {
@@ -181,9 +158,6 @@
                 setTimeout(loadApp, 10);
                 return;
             }
-
-            // تطبيق التصغير إلى 45% عند تحميل الصفحة
-            flipbook.css('transform', 'scale(0.45)');  // التصغير إلى 45%
 
             $('#book-zoom').mousewheel(function (event, delta, deltaX, deltaY) {
                 var data = $(this).data(),
@@ -215,6 +189,7 @@
                     data.scrollPage = undefined;
                     data.scrollTimer = undefined;
                 }, 1000);
+
             });
 
             $("#slider").slider({
@@ -324,16 +299,6 @@
                             $('.sj-book .p17').removeClass('fixed');
 
                         Hash.go('page/' + page).update();
-
-                        // إظهار / إخفاء زر العين بناءً على الصفحة
-                        const eyeButton = document.getElementById('eye-button');
-                        if ([1, 2, 8, 9].includes(page)) {
-                            eyeButton.style.display = 'none';
-                        } else if (page > 3 && page < 8) {
-                            eyeButton.style.display = 'flex';
-                        } else {
-                            eyeButton.style.display = 'none';
-                        }
                     },
 
                     turned: function (e, page, view) {
@@ -386,12 +351,16 @@
 
         document.getElementById('zoom-in').addEventListener('click', function () {
             const book = document.querySelector('.sj-book');
-            book.style.transform = 'scale(1.2)';
+            let scale = parseFloat(book.style.transform.replace('scale(', '').replace(')', '')) || 1;
+            scale += 0.2;
+            book.style.transform = 'scale(' + scale + ')';
         });
 
         document.getElementById('zoom-out').addEventListener('click', function () {
             const book = document.querySelector('.sj-book');
-            book.style.transform = 'scale(1)';
+            let scale = parseFloat(book.style.transform.replace('scale(', '').replace(')', '')) || 1;
+            scale -= 0.2;
+            book.style.transform = 'scale(' + scale + ')';
         });
 
         document.getElementById('prev-page').addEventListener('click', function () {
