--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             justify-content: center;
             align-items: center;
             margin-top: -20px;
+            overflow: hidden; /* لإخفاء المحتوى المتجاوز */
         }
 
         .sj-book {
             max-width: 100%;
             max-height: 100%;
             transition: transform 0.3s ease-in-out;
+            transform-origin: center center; /* الحفاظ على الأصل عند التكبير */
         }
 
         .controls {
@@ -79,29 +81,6 @@
 
         iframe.active {
             display: block;
-        }
-
-        .eye-button {
-            display: none;
-            position: fixed;
-            top: 50%;
-            right: 20px;
-            transform: translateY(-50%);
-            width: 50px;
-            height: 50px;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            font-size: 24px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            z-index: 10;
-        }
-
-        .eye-button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
         }
 
         .instructions {
@@ -171,8 +150,6 @@
 
     <!-- نموذج التقييم -->
     <iframe id="feedback-form" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__RgmXVJUQUpYTlBQQzgyWVBNQU9MWkNKN0tRWkM4Vi4u&embed=true"></iframe>
-
-    <div class="eye-button" id="eye-button">&#128065;</div>
 
     <script>
         // إلغاء فتح النموذج تلقائيًا عند تحميل الصفحة
@@ -326,16 +303,6 @@
                             $('.sj-book .p17').removeClass('fixed');
 
                         Hash.go('page/' + page).update();
-
-                        // إظهار / إخفاء زر العين بناءً على الصفحة
-                        const eyeButton = document.getElementById('eye-button');
-                        if ([1, 2, 8, 9].includes(page)) {
-                            eyeButton.style.display = 'none';
-                        } else if (page > 3 && page < 8) {
-                            eyeButton.style.display = 'flex';
-                        } else {
-                            eyeButton.style.display = 'none';
-                        }
                     },
 
                     turned: function (e, page, view) {
@@ -399,6 +366,15 @@
             scale -= 0.1;
             if (scale < 0.2) scale = 0.2;  // الحد الأدنى للتكبير
             document.querySelector('.sj-book').style.transform = `scale(${scale})`;
+        });
+
+        // التأكد من عمل الأزرار الخاصة بالأسهم
+        document.getElementById('prev-page').addEventListener('click', function () {
+            $('.sj-book').turn('previous');
+        });
+
+        document.getElementById('next-page').addEventListener('click', function () {
+            $('.sj-book').turn('next');
         });
     </script>
 </body>
