--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         .controls {
             position: fixed;
-            bottom: -10px;
+            bottom: 20px; /* تم تعديل هذه القيمة لرفع الأزرار قليلاً */
             left: 50%;
             transform: translateX(-50%);
             display: flex;
