--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: white;
+            background-color: white; /* الوضع المشمس */
+            color: black;
             background-image: url('pics/newsletter_bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+            transition: background-color 0.3s, color 0.3s; /* الانتقال السلس */
         }
 
         #canvas {
@@ -68,8 +70,7 @@
         .controls-vertical {
             position: fixed;
             right: 20px;
-            top: 50%;
-            transform: translateY(-50%);
+            bottom: 20px; /* لضبط الأزرار أسفل الكتاب */
             display: flex;
             flex-direction: column;
             gap: 10px;
@@ -155,7 +156,7 @@
         <button id="zoom-out">-</button>
     </div>
 
-    <button id="toggle-theme">&#x1F4A7;</button>
+    <button id="toggle-theme">☀️</button> <!-- بداية الشمس (الوضع المشمس) -->
 
     <script>
         // إلغاء فتح النموذج تلقائيًا عند تحميل الصفحة
@@ -350,8 +351,20 @@
             complete: loadApp
         });
 
+        // تبديل اللون بين مشمس وهلال
+        let isDayMode = true;
+
         document.getElementById('toggle-theme').addEventListener('click', function () {
-            document.body.style.backgroundColor = document.body.style.backgroundColor === 'black' ? 'white' : 'black';
+            if (isDayMode) {
+                document.body.style.backgroundColor = 'black'; /* وضع الهلال */
+                document.body.style.color = 'white';
+                document.getElementById('toggle-theme').innerHTML = '🌙'; // الهلال
+            } else {
+                document.body.style.backgroundColor = 'white'; /* وضع مشمس */
+                document.body.style.color = 'black';
+                document.getElementById('toggle-theme').innerHTML = '☀️'; // الشمس
+            }
+            isDayMode = !isDayMode;
         });
 
         // وظيفة التكبير والتصغير عند الضغط على "+" و "-"
